Fix message word wrap

--- a/templates/ChatPage/Question/ChatModal/ChatModal.module.sass
+++ b/templates/ChatPage/Question/ChatModal/ChatModal.module.sass
@@ -81,6 +81,7 @@
     white-space: normal
     overflow: visible
     text-overflow: unset
+    word-break: break-word
 
 .myMessage
     display: flex
@@ -147,8 +148,6 @@
 .input
     position: relative
     width: 100%
-
-.field
 
 .orb
     position: absolute
